@@ -9,7 +9,8 @@ cocos2d-x-3.0final ?.? ?
      [FIX]          ControlButton doesn't support to set scale ratio of touchdown state.
      [FIX]          Particles: Crash was triggered if there is not `textureFileName`section in particle plist file.
      [FIX]          Renderer: QuadCommand::init() does not copy the Quads, it only store a reference making the code faster
-     [FIX]	    Renderer: Performance improved in Sprite and SpriteBatchNode (and subclasses) sprites in about 20%
+     [FIX]          Renderer: Performance improved in Sprite and SpriteBatchNode (and subclasses) sprites in about 20%
+     [FIX]          Sprite: removed _hasChildren optimization. It uses !_children.empty() now which is super fast as well
      [FIX]          Tests: TestCpp works with CMake on Windows.
      [FIX]          Tests: Sprites Performance Test has 3 new tests
      [FIX]          TextureCache: getTextureForKey and removeTextureForKey work as expected
